kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: invue
spec:
  type: NodePort
  selector:
    app: invue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
