kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: invue
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: invue.catalyst.it
    http:
      paths:
        - path: /(.+)
          backend:
            serviceName: invue
            servicePort: 80
